[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
Pillow = "^9.4.0"
bs4 = "^0.0.1"
spotipy = "^2.22.1"
google-api-python-client = "^2.80.0"
Flask-Uploads = "^0.2.1"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"
Flask-SQLAlchemy = "^3.0.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"